--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
                         </div>
                         <div class="col-sm-5">
                             <td>
-                                <img src="picture/us.jpg" class="img-rounded" style="width: 300px;height: auto;display:block;margin-right: auto;margin-left: auto">
+                                <img src="picture/us.jpg" class="img-rounded" style="width: 300px;height: auto;display:block;margin-right: auto;margin-left: auto;margin-top:15px;">
                             </td>
                         </div>
                     </div>
