--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
 
 
             <table class="table table-hover">
-                <tr class="warning">
+                <tr class="success">
                     <div class="row">
                         <div class="col-sm-3">
                             <td>
@@ -278,7 +278,7 @@
                         </div>
                     </div>
                 </tr>
-                <tr class="success">
+                <tr>
                     <div class="row">
                         <div class="col-sm-3">
                             <td>
@@ -304,6 +304,7 @@
 
 
             </table>
+            <img class="last" src="picture/happy_data.png" style="display: block; margin-left: auto;margin-right:auto;margin-top:100px;">
 
 
             <div class="container ">
