--- a/index.html
+++ b/index.html
@@ -322,12 +322,17 @@
                     <span>DATA</span>
                     <br>Visualization
                 </h3>
-            </div>
-            <div class="myname">
-                JAMIE
-            </div>
-            <div class="mylogo">
-                <img class="logo" src="picture/茜2.png">
+
+                <div class="myname">
+
+                </div>
+                <div class="mylogo">
+                    <img class="logo" src="picture/茜2.png">
+                </div>
+
+                <h3 class="footer_NAME">
+                    JAMIE
+                </h3>
             </div>
 
 
